Proposed changes to the documentation for the linux running (#81)
* Proposed changes to the documentation for the linux running

This PR is proposed changes that make it clearer what's needed after version 1.4.1. this version removes the requirement on executable JAR file plugins and instead uses an XML description file for each plug-in.

* Update run-on-linux.md

* Removed the need to compile the plugins. The plugins are now XML and Arduino source files loaded at runtime, or copied in

* Modified build instructions to remove master instructions.