@@ -2,66 +2,46 @@
 
 Thanks to @ptapping for the linux instructions and build script. *Please note that running on Linux is supported on a best efforts community basis, as we don't have a desktop Linux build to test with.*
 
+### Things that are needed in order to run and work with TcMenuDesigner.
+
+At the moment on Linux, in order to run designer on Linux, you'll need to build it first. Then you can run TcMenu designer, you'll need:
+
+* An installation of Java OpenJDK **11** or later that can be readily installed from your package manager.
+* An installation of maven, that again can be readily installed from your package manager.
+
+We'll look into building a package in the future as time permits.
+
 ### Using the build script
 
 Run the `install_linux.sh` script in the `tcMenu/tcMenuGenerator` directory. Using the `--uninstall` option will remove the installed package. The script will tell you where the app has been installed. Take a look through the scripts before running to ensure you're happy with where it will place the files. 
 
-### Raw instructions
+### Raw instructions, example for building 1.4.2 and above.
 
     # Ensure java and maven build system installed
     # Arch Linux
-    sudo pacman -Sy jdk11-openjdk maven
+    sudo pacman -Sy jdk11-openjdk maven # or sudo pacman -Sy jdk14-openjdk maven
     # Java version can be selected with
-    # sudo archlinux-java set java-11-openjdk
+    # sudo archlinux-java set <java-11-openjdk or java-14-openjdk>
 
     # Ubuntu, Debian (untested, should work)
-    sudo apt update && sudo apt install openjdk-11-jdk maven
+    sudo apt update && sudo apt install openjdk-11-jdk maven # or use 14 if you wish
     # Java version can be managed with
     # sudo update-alternatives --config java
 
     # Get source code
-    wget https://github.com/davetcc/tcMenu/archive/1.3.5.tar.gz
-    tar xvf 1.3.5.tar.gz
-    cd tcMenu-1.3.5
-
-    # Build plugins
-    mvn clean install -f baseInputDisplayPlugin/pom.xml
-    mvn clean install -f dfRobotCodePlugin/pom.xml
+    wget https://github.com/davetcc/tcMenu/archive/1.4.2.tar.gz
+    tar xvf 1.4.2.tar.gz
+    cd tcMenu-1.4.2
 
     # Build app
     mvn -DskipTests clean install -f tcMenuGenerator/pom.xml
 
     # Run
-    cd tcMenuGenerator/target/jfx/app/
+    cd tcMenuGenerator/target/jfx/app
     java --module-path ../deps --add-modules com.thecoderscorner.tcmenu.menuEditorUI com.thecoderscorner.menu.editorui.MenuEditorApp
-    
-Another example for 1.4.0
 
-    # Ensure java and maven build system installed
-    # Arch Linux
-    sudo pacman -Sy jdk11-openjdk maven
-    # Java version can be selected with
-    # sudo archlinux-java set java-11-openjdk
+### If you don't want to use Library Manager or Plugin automatic updates
 
-    # Ubuntu, Debian (untested, should work)
-    sudo apt update && sudo apt install openjdk-11-jdk maven
-    # Java version can be managed with
-    # sudo update-alternatives --config java
+By default the plugin manager will keep the plugins up to date, using a cache of the latest released plugins at thecoderscorner.com. If you are not happy with this, you can either copy the two directories `core-display` and `core-remote` from https://github.com/davetcc/tcMenu/tree/master/CoreXmlPlugins into .tcmenu/plugins (or even create a new plugin directory and add the following VM argument -DadditionalPluginsDir=myPath). Even if you do this manually, the plugin manager will warn you when they are no longer current.
 
-    # Get source code for 1.4.0
-    # Could use --recursive to get submodules, but 1.4.0 doesn't allow installation of them anymore
-    git clone https://github.com/davetcc/tcMenu.git
-    cd tcMenu
-    git checkout 9c502b0
-    git switch -c 1.4.0
-
-    # Build plugins
-    mvn clean install -f baseInputDisplayPlugin
-    mvn clean install -f dfRobotCodePlugin
-
-    # Build app
-    mvn -DskipTests clean install -f tcMenuGenerator
-
-    # Run
-    cd tcMenuGenerator/target/jfx/app/
-    java --module-path ../deps --add-modules com.thecoderscorner.tcmenu.menuEditorUI com.thecoderscorner.menu.editorui.MenuEditorApp
+If you do not want to use your Arduino IDE library manager, the embedded folder contains links to the embedded libraries and is  generally quite up to date. You can copy those into your library folder. We really recommend using Library Manager.
